--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node_version: "14"
+          node-version: "14"
       - name: Install dependencies
         run: npm install
       - name: Run eslint
