--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": ""
+		"url": "https://github.com/serkonda7/vscode-vba"
 	},
 	"publisher": "serkonda7",
 	"engines": {
@@ -46,14 +46,16 @@
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
-		"lint": "eslint ."
+		"lint": "eslint .",
+		"package": "vsce package"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.56.0",
 		"@types/node": "14.x",
-		"@typescript-eslint/eslint-plugin": "^4.31.1",
-		"@typescript-eslint/parser": "^4.31.1",
-		"eslint": "^7.32.0",
-		"typescript": "^4.4.3"
+		"@types/vscode": "^1.56.0",
+		"@typescript-eslint/eslint-plugin": "^4.32",
+		"@typescript-eslint/parser": "^4.32",
+		"eslint": "^7.32",
+		"typescript": "^4.4.3",
+		"vsce": "^1.100.0"
 	}
 }
