--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,19 @@ on:
       - master
 
 jobs:
+  compile-and-package:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+      - name: Install dependencies
+        run: npm install
+      - name: Compile
+        run: npm run compile
+      - name: VSCE package
+        run: npm run package
   code-style:
     runs-on: ubuntu-latest
     steps:
