--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
 		"lint": "eslint .",
+		"test": "vscode-tmgrammar-test -s source.vba -g syntaxes/vba.tmLanguage.json -t \"syntaxes/tests/*.bas\"",
 		"package": "vsce package"
 	},
 	"devDependencies": {
@@ -56,6 +57,7 @@
 		"@typescript-eslint/parser": "^4.32",
 		"eslint": "^7.32",
 		"typescript": "^4.4.3",
-		"vsce": "^1.100.0"
+		"vsce": "^1.100.0",
+		"vscode-tmgrammar-test": "^0.0.11"
 	}
 }
