--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,18 @@ on:
       - master
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+      - name: Install dependencies
+        run: npm install
+      - name: Test
+        run: npm run test
+
   compile-and-package:
     runs-on: ubuntu-latest
     steps:
@@ -20,6 +32,7 @@ jobs:
         run: npm run compile
       - name: VSCE package
         run: npm run package
+
   code-style:
     runs-on: ubuntu-latest
     steps:
