--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-vba",
 	"displayName": "VBA",
 	"description": "Visual Basic language support for VS Code.",
-	"version": "0.0.0",
+	"version": "0.1.0",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -51,13 +51,13 @@
 		"package": "vsce package"
 	},
 	"devDependencies": {
-		"@types/node": "14.x",
+		"@types/node": "14.17.20",
 		"@types/vscode": "^1.56.0",
-		"@typescript-eslint/eslint-plugin": "^4.32",
-		"@typescript-eslint/parser": "^4.32",
+		"@typescript-eslint/eslint-plugin": "^4.33",
+		"@typescript-eslint/parser": "^4.33",
 		"eslint": "^7.32",
 		"typescript": "^4.4.3",
-		"vsce": "^1.100.0",
+		"vsce": "^1.100.1",
 		"vscode-tmgrammar-test": "^0.0.11"
 	}
 }
