--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
 		"package": "vsce package"
 	},
 	"devDependencies": {
-		"@types/node": "14.17.20",
+		"@types/node": "^14.17.20",
 		"@types/vscode": "^1.56.0",
-		"@typescript-eslint/eslint-plugin": "^4.33",
-		"@typescript-eslint/parser": "^4.33",
-		"eslint": "^7.32",
+		"@typescript-eslint/eslint-plugin": "^5",
+		"@typescript-eslint/parser": "^5",
+		"eslint": "^8",
 		"typescript": "^4.4.3",
 		"vsce": "^1.100.1",
-		"vscode-tmgrammar-test": "^0.0.11"
+		"vscode-tmgrammar-test": "~0.0.11"
 	}
 }
