--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
 		"package": "vsce package"
 	},
 	"devDependencies": {
-		"@types/node": "^14.18.3",
-		"@types/vscode": "^1.56.0",
-		"@typescript-eslint/eslint-plugin": "^5.8.1",
-		"@typescript-eslint/parser": "^5.8.1",
-		"eslint": "^8.5",
-		"typescript": "^4.5.4",
-		"vsce": "^2.6.0",
+		"@types/node": "^14.18.12",
+		"@types/vscode": "~1.56.0",
+		"@typescript-eslint/eslint-plugin": "^5.17.0",
+		"@typescript-eslint/parser": "^5.17.0",
+		"eslint": "^8.12.0",
+		"typescript": "~4.6.3",
+		"vsce": "^2.7.0",
 		"vscode-tmgrammar-test": "~0.0.11"
 	}
 }
