--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "vscode-vba",
 	"displayName": "VBA",
 	"description": "Visual Basic language support for VS Code.",
-	"version": "0.1.3",
+	"icon": "icons/icon_256x256.png",
+	"version": "0.1.4-dev",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
