--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "vscode-vba",
 	"displayName": "VBA",
-	"description": "Visual Basic language support for VS Code.",
+	"description": "Visual Basic for Applications support for VS Code.",
 	"icon": "images/icon_256x256.png",
 	"version": "0.1.4-dev",
 	"license": "MIT",
