--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,8 @@ name: CI
 on:
   pull_request:
   push:
-    branches:
-      - main
-  release:
-    types:
-      - created
+    branches: [main]
+    tags: ['0.[0-9]+.[0-9]+']
 
 jobs:
   test:
@@ -35,6 +32,11 @@ jobs:
         run: npm run compile
       - name: Package
         run: npm run package
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: vscode-vba-0.*.*.vsix
 
   code-style:
     runs-on: ubuntu-20.04
@@ -51,9 +53,8 @@ jobs:
   publish:
     needs:
       - test
-      - code-style
       - compile-and-package
-    if: github.event_name == 'release'
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
