convert grammar and config

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 					".cls",
 					".frm"
 				],
-				"configuration": "./out/vba.configuration.json"
+				"configuration": "./out/language-configuration.json"
 			}
 		],
 		"grammars": [
