--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -35,23 +35,23 @@ repository:
 
   numbers:
     patterns:
+      - name: constant.numeric.date
+        match: "(?i)#((Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec)|[0-9]{1,2})(-|\/)[0-9]{1,2}((-|\/)[0-9]{1,4})?#"
+      - name: constant.numeric.decimal
+        match: (?<!\w)-?\d+(\.\d+)?
+      - name: constant.numeric.octal
+        match: (?i)-?&O[0-7]+
+      - name: constant.numeric.hexadecimal
+        match: (?i)-?&H[0-9A-F]+
       - name: constant.language.vba
         match: (?i:\b(Empty|False|Nothing|Null|True)\b)
-      - name: constant.numeric.date
-        match: "#(?i:(A(pr|ug)|Dec|Feb|J(an|u[ln])|Ma(r|y)|Nov|Oct|Sep)|[0-9]12)[-/][0-9]12([-/][0-9]14)?#"
-      - name: constant.numeric.hexadecimal
-        match: (?<=[\(*+-/:=^ \\])-?(?i:&H[0-9A-F]+)(?=[\n\):^ ])
-      - name: constant.numeric.octal
-        match: (?<=[\(*+-/:=^ \\])-?(?i:&O[0-7]+)(?=[\n\):^ ])
-      - name: constant.numeric.decimal
-        match: "(?<=[(*+\-/:=^ \\])-?\d+(\.\d+)?#?(?=[\n\): ])"
 
   options:
     patterns:
       - name: storage.declaration.vba
         match: (?i:\b(C(all|lass|onst)|Dim|(G|L|S)et|ReDim( Preserve)?)\b)
       - name: storage.option.vba
-        match: "(?i:\bOption (Base [01]|Compare (Binary|Text)|Explicit|Private Module)\b)"
+        match: (?i:\bOption (Base [01]|Compare (Binary|Text)|Explicit|Private Module)\b)
 
   strings:
     name: string.quoted
