yaml configuration files and cleanup (#47)
- update eslint to 2.13.0
- convert eslintrc to yaml
- convert language grammar and configuration to yaml
  - their json output is minified
- update vsce ignores
- simplify many regex patterns
- fix number highlighting inside variable names
- add highlighting for a few missing keywords
- slightly restructure tests
- change some scope names to comply with textmate spec

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,9 @@
 		"lib": [
 			"ES2020"
 		],
-		"sourceMap": true,
-		"rootDir": "src",
-		"strict": true 
+		"sourceMap": false,
+		"rootDir": ".",
+		"strict": true
 	},
 	"exclude": [
 		"node_modules"
