--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 	"scripts": {
 		"compile": "tsc -p ./",
 		"lint": "eslint .",
-		"test": "vscode-tmgrammar-test -s source.vba -g ./out/vba.tmGrammar.json -t \"syntaxes/tests/*.bas\"",
+		"test": "vscode-tmgrammar-test -g ./out/vba.tmGrammar.json \"syntaxes/tests/*.bas\"",
 		"install-dev-ext": "npm run test && vsce package -o ./out/vscode-vba-dev.vsix && code --install-extension ./out/vscode-vba-dev.vsix --force",
 		"package": "vsce package",
 		"convert-yaml": "ts-node ./scripts/yaml2json.ts",
