--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 	"scripts": {
 		"compile": "tsc -p ./",
 		"lint": "eslint .",
-		"test": "vscode-tmgrammar-test -s source.vba -g ./out/vba.tmGrammar.json -t \"syntaxes/tests/*.bas\"",
+		"test": "vscode-tmgrammar-test -g ./out/vba.tmGrammar.json \"syntaxes/tests/*.bas\"",
 		"install-dev-ext": "npm run test && vsce package -o ./out/vscode-vba-dev.vsix && code --install-extension ./out/vscode-vba-dev.vsix --force",
 		"package": "vsce package",
 		"convert-yaml": "ts-node ./scripts/yaml2json.ts",
@@ -57,15 +57,15 @@
 	},
 	"devDependencies": {
 		"@types/js-yaml": "^4.0.5",
-		"@types/node": "^14.18.12",
+		"@types/node": "^14.18.18",
 		"@types/vscode": "~1.56.0",
-		"@typescript-eslint/eslint-plugin": "^5.19.0",
-		"@typescript-eslint/parser": "^5.19.0",
-		"eslint": "^8.13.0",
+		"@typescript-eslint/eslint-plugin": "^5.26.0",
+		"@typescript-eslint/parser": "^5.26.0",
+		"eslint": "^8.16.0",
 		"js-yaml": "^4.1.0",
-		"ts-node": "^10.7.0",
-		"typescript": "~4.6.3",
-		"vsce": "^2.7.0",
-		"vscode-tmgrammar-test": "~0.0.11"
+		"ts-node": "^10.8.0",
+		"typescript": "~4.6.4",
+		"vsce": "^2.8.0",
+		"vscode-tmgrammar-test": "~0.1.1"
 	}
 }
