--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	"activationEvents": [
 		"onLanguage:vba"
 	],
-	"main": "./out/src/extension.js",
+	"main": "./out/extension.js",
 	"contributes": {
 		"languages": [
 			{
@@ -50,20 +50,18 @@
 		"test": "vscode-tmgrammar-test -g ./out/vba.tmGrammar.json \"syntaxes/tests/*.bas\"",
 		"install-dev-ext": "npm run test && vsce package -o ./out/vscode-vba-dev.vsix && code --install-extension ./out/vscode-vba-dev.vsix --force",
 		"package": "vsce package",
-		"convert-yaml": "ts-node ./scripts/yaml2json.ts",
+		"convert-yaml": "yaml2json language-configuration.yml syntaxes/vba.tmGrammar.yml",
 		"pretest": "npm run convert-yaml",
 		"postinstall-dev-ext": "echo 'Please reload the window (run `>reload window` from command palette)'",
 		"vscode:prepublish": "npm run compile && npm run convert-yaml"
 	},
 	"devDependencies": {
-		"@types/js-yaml": "^4.0.5",
+		"@serkonda7/yaml2json": "^0.2.0",
 		"@types/node": "^14.18.18",
 		"@types/vscode": "~1.56.0",
 		"@typescript-eslint/eslint-plugin": "^5.26.0",
 		"@typescript-eslint/parser": "^5.26.0",
 		"eslint": "^8.16.0",
-		"js-yaml": "^4.1.0",
-		"ts-node": "^10.8.0",
 		"typescript": "~4.6.4",
 		"vsce": "^2.8.0",
 		"vscode-tmgrammar-test": "~0.1.1"
