--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
 	},
 	"devDependencies": {
 		"@serkonda7/yaml2json": "^0.4.0",
-		"@types/node": "^14.18.18",
+		"@types/node": "^14.18.21",
 		"@types/vscode": "~1.56.0",
-		"@typescript-eslint/eslint-plugin": "^5.26.0",
-		"@typescript-eslint/parser": "^5.26.0",
-		"eslint": "^8.16.0",
-		"typescript": "~4.7.2",
-		"vsce": "^2.8.0",
+		"@typescript-eslint/eslint-plugin": "~5.30.5",
+		"@typescript-eslint/parser": "~5.30.5",
+		"eslint": "~8.19.0",
+		"typescript": "~4.7.4",
+		"vsce": "^2.9.2",
 		"vscode-tmgrammar-test": "~0.1.1"
 	}
 }
