--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -33,7 +33,9 @@ repository:
       - name: keyword.control.vba
         match: (?i:\b((?<= )E(nd|xit)|As|And|By(Ref|Val)|Goto|Is|Like|Mod|Not|On Error|Optional|Or|Resume Next|Stop|Xor)\b)
       - name: keyword.other.vba
-        match: (?i:\b(Attribute|Call|End (Function|Property|Sub)|((Private|Public|Static) )?(Const|Function|Property|Sub))\b)
+        match: (?i:\b(Attribute|Call|End (Function|Property|Sub)|(Static )?(Const|Function|Property|Sub))\b)
+      - name: keyword.other.visibility.vba
+        match: (?i:\b(Private|Public)\b)
       - name: constant.language.vba
         match: (?i)\b(Empty|False|Nothing|Null|True)\b
 
