restore function name highlight after `Call`
- doesn't work for functions from other modules for now

--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -40,7 +40,7 @@ repository:
 
   functions:
     name: entity.name.function.vba
-    match: (?i:\b(?<=(Function|Sub)\s)[a-zA-Z][a-zA-Z0-9_]*\b)(?=\(\)?)
+    match: (?i:\b(?<=(Call|Function|Sub)\s)[a-zA-Z][a-zA-Z0-9_]*\b)(?=\(\)?)
 
   numbers:
     patterns:
