--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "VBA",
 	"description": "Visual Basic for Applications support for VS Code.",
 	"icon": "images/icon_256x256.png",
-	"version": "0.6.0",
+	"version": "0.7.0-dev",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -11,10 +11,10 @@
 	},
 	"publisher": "serkonda7",
 	"engines": {
+		"node": "14 || >=16",
 		"vscode": "^1.56.0"
 	},
 	"categories": [
-		"Formatters",
 		"Programming Languages"
 	],
 	"activationEvents": [
@@ -62,13 +62,13 @@
 	},
 	"devDependencies": {
 		"@serkonda7/yaml2json": "^0.4.0",
-		"@types/node": "^14.18.23",
+		"@types/node": "^14.18.26",
 		"@types/vscode": "~1.56.0",
-		"@typescript-eslint/eslint-plugin": "~5.33.0",
-		"@typescript-eslint/parser": "~5.33.0",
-		"eslint": "~8.21.0",
+		"@typescript-eslint/eslint-plugin": "~5.34.0",
+		"@typescript-eslint/parser": "~5.34.0",
+		"eslint": "~8.22.0",
 		"typescript": "~4.7.4",
-		"vsce": "^2.10.0",
+		"vsce": "^2.10.2",
 		"vscode-tmgrammar-test": "~0.1.1"
 	}
 }
