vscodeignore: switch to file whitelisting

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,20 +1,15 @@
-# version control
-.gitignore
-.github/
+# ignore everything
+*
+*/
 
-# config files
-.eslintignore
-tsconfig.json
+# whitelist needed files
+!package.json
 
-# source files
-src/
-**/scripts/
-**/tests/
-**/*.yml
-**/*.xcf
+!out/*.js
+!out/*.json
 
-# other
-.vscode/
-*.code-workspace
-**/*.map
-CONTRIBUTING.md
+!images/*.png
+
+!README.md
+!LICENSE.md
+!CHANGELOG.md
