add VS Code launch configuration

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 	},
 	"scripts": {
 		"compile": "tsc -p ./",
+		"watch": "tsc --watch -p ./",
 		"lint": "eslint .",
 		"test": "vscode-tmgrammar-test -g ./out/vba.tmGrammar.json \"syntaxes/tests/*.bas\"",
 		"install-dev-ext": "vsce package -o ./out/vscode-vba-dev.vsix && code --install-extension ./out/vscode-vba-dev.vsix --force",
