icon and licensing updates
- icon
  - replace xcf with a svg
  - change text to white with black outline
  - move icon license into images/ directory
  - change license to CC-BY-SA
- other licensing
  - remove .md extension
  - add license headers to important files

--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -1,3 +1,7 @@
+# This file is part of vscode-vba.
+# Copyright (c) 2021-2022 Lukas Neubert
+# Use of this source file is governed by the MIT license.
+
 scopeName: source.vba
 fileTypes:
   - .bas
