--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -30,15 +30,15 @@ repository:
       - name: keyword.other.option.vba
         match: (?i)\bOption (Base [01]|Compare (Binary|Text)|Explicit|Private Module)\b
       - name: keyword.conditional.vba
-        match: (?i:\b(Case( Else)?|Else(If)?|For( Each)?|(I)?If|In|New|(Select )?Case|Then|To|Step|With)\b)
+        match: (?i:\b(Do(( While)|( Until))?|While|Case( Else)?|Else(If)?|For( Each)?|(I)?If|In|New|(Select )?Case|Then|To|Step|With)\b)
       - name: keyword.conditional.end.vba
-        match: (?i:\bEnd( )?If|End (Select|With)|Next\b)
+        match: (?i:\b(End( )?If|End (Select|With)|Next|Wend|Loop(( While)|( Until))?|Exit (For|Do|While))\b)
       - name: keyword.control.vba
         match: (?i:\b((?<= )E(nd|xit)|As|And|By(Ref|Val)|Goto|Is|Like|Mod|Not|On Error|Optional|Or|Resume Next|Stop|Xor)\b)
       - name: keyword.other.vba
         match: (?i:\b(Attribute|Call|End (Function|Property|Sub)|(Static )?(Const|Function|Property|Sub))\b)
       - name: keyword.other.visibility.vba
-        match: (?i:\b(Private|Public)\b)
+        match: (?i:\b(Private|Public|Friend)\b)
       - name: constant.language.vba
         match: (?i)\b(Empty|False|Nothing|Null|True)\b
 
