--- a/package.json
+++ b/package.json
@@ -67,11 +67,12 @@
 		"compile": "tsc -p ./",
 		"watch": "tsc --watch -p ./",
 		"lint": "eslint .",
-		"test": "vscode-tmgrammar-test -g ./out/vba.tmGrammar.json \"syntaxes/tests/*.bas\"",
+		"test": "npm run test-vba && npm run test-wwb",
+		"test-vba": "vscode-tmgrammar-test -g ./out/vba.tmGrammar.json \"syntaxes/tests/*.bas\"",
 		"test-wwb": "vscode-tmgrammar-test -g ./out/wwb.tmGrammar.json \"syntaxes/tests/*.wwd\"",
 		"install-dev-ext": "vsce package -o ./out/vscode-vba-dev.vsix && code --install-extension ./out/vscode-vba-dev.vsix --force",
 		"package": "vsce package",
-		"convert-yaml": "yaml2json language-configuration.yml syntaxes/vba.tmGrammar.yml syntaxes/wwb.tmGrammar.yml",
+		"convert-yaml": "yaml2json language-configuration.yml syntaxes/*.yml",
 		"pretest": "npm run convert-yaml",
 		"postinstall-dev-ext": "echo 'Please reload the window (run `>reload window` from command palette)'",
 		"vscode:prepublish": "npm run compile && npm run convert-yaml"
