minor fix types

--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -71,8 +71,8 @@ repository:
   types:
     patterns:
       - name: support.type.builtin.vba
-        match: (?i)\b(Any|Byte|Boolean|Currency|Collection|Date|Double|Integer|Long(Long|Ptr)?|Object|Single|String)|Variant\b
-      - match: (?i)(?<=As\s+)([a-zA-Z]+)
+        match: (?i)\b(Any|Byte|Boolean|Currency|Collection|Date|Double|Integer|Long(Long|Ptr)?|Object|Single|String|Variant)\b
+      - match: (?i)(?<=\s+As\s+)([a-zA-Z]+)
         captures:
           1:
             name: support.type
