--- a/package.json
+++ b/package.json
@@ -72,13 +72,13 @@
 		"test-wwb": "vscode-tmgrammar-test -g ./out/wwb.tmGrammar.json \"syntaxes/tests/*.wwd\"",
 		"install-dev-ext": "vsce package -o ./out/vscode-vba-dev.vsix && code --install-extension ./out/vscode-vba-dev.vsix --force",
 		"package": "vsce package",
-		"convert-yaml": "yaml2json language-configuration.yml syntaxes/*.yml",
+		"convert-yaml": "yaml2json language-configuration.yml \"syntaxes/*.yml\"",
 		"pretest": "npm run convert-yaml",
 		"postinstall-dev-ext": "echo 'Please reload the window (run `>reload window` from command palette)'",
 		"vscode:prepublish": "npm run compile && npm run convert-yaml"
 	},
 	"devDependencies": {
-		"@serkonda7/yaml2json": "^0.7.0",
+		"@serkonda7/yaml2json": "^0.8.0",
 		"@types/node": "^14.18.32",
 		"@types/vscode": "~1.56.0",
 		"@typescript-eslint/eslint-plugin": "~5.40.0",
