fix operators to be whole world

--- a/syntaxes/wwb.tmGrammar.yml
+++ b/syntaxes/wwb.tmGrammar.yml
@@ -15,7 +15,7 @@ repository:
   keywords:
     patterns:
       - name: keyword.control.wwb
-        match: AndAlso|OrElse|IsNot|Return
+        match: ((?i)\b(AndAlso|OrElse|IsNot|Return)\b)
 
   types:
     patterns:
