--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "VBA",
 	"description": "Visual Basic for Applications and WinWrap Basic support for VS Code.",
 	"icon": "images/icon_256x256.png",
-	"version": "0.8.0",
+	"version": "0.9.0-dev",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -89,9 +89,9 @@
 		"@types/vscode": "~1.56.0",
 		"@typescript-eslint/eslint-plugin": "~5.40.0",
 		"@typescript-eslint/parser": "~5.40.0",
+		"@vscode/vsce": "~2.15.0",
 		"eslint": "~8.25.0",
 		"typescript": "~4.8.4",
-		"vsce": "~2.11.0",
 		"vscode-tmgrammar-test": "~0.1.1"
 	}
 }
