--- a/syntaxes/wwb.tmGrammar.yml
+++ b/syntaxes/wwb.tmGrammar.yml
@@ -1,5 +1,5 @@
 # This file is part of vscode-vba.
-# Copyright (c) 2021-2022 Lukas Neubert
+# Copyright (c) 2021-present Lukas Neubert
 # Use of this source file is governed by the MIT license.
 
 scopeName: source.wwb
