--- a/package.json
+++ b/package.json
@@ -67,9 +67,7 @@
 		]
 	},
 	"scripts": {
-		"compile": "tsc -p ./",
-		"watch": "tsc --watch -p ./",
-		"lint": "eslint .",
+		"compile": "bait --library -o out/extension.js src",
 		"test": "npm run test-vba && npm run test-wwb",
 		"test-vba": "vscode-tmgrammar-test -g ./out/vba.tmGrammar.json \"syntaxes/tests/vba/*.bas\"",
 		"test-wwb": "vscode-tmgrammar-test -g ./out/wwb.tmGrammar.json \"syntaxes/tests/other/*.wwd\"",
@@ -82,13 +80,7 @@
 	},
 	"devDependencies": {
 		"@serkonda7/yaml2json": "^0.8.0",
-		"@types/node": "^16.18.6",
-		"@types/vscode": "~1.74.0",
-		"@typescript-eslint/eslint-plugin": "~5.40.0",
-		"@typescript-eslint/parser": "~5.40.0",
-		"@vscode/vsce": "~2.15.0",
-		"eslint": "~8.25.0",
-		"typescript": "~4.8.4",
+		"@vscode/vsce": "~2.19.0",
 		"vscode-tmgrammar-test": "~0.1.1"
 	}
 }
