--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -44,8 +44,10 @@ repository:
         match: (?i)\b(Empty|False|Nothing|Null|True)\b
 
   functions:
-    name: entity.name.function.vba
-    match: (?i:\b(?<=(Call|Function|Sub)\s)[a-zA-Z][a-zA-Z0-9_]*\b)(?=\(\)?)
+    match: (?i:\b(?:Call|Function|Sub)\s([a-zA-Z][a-zA-Z0-9_]*)\b)(?=\(\)?)
+    captures:
+      1:
+        name: entity.name.function.vba
 
   numbers:
     patterns:
@@ -72,7 +74,7 @@ repository:
     patterns:
       - name: support.type.builtin.vba
         match: (?i)\b(Any|Byte|Boolean|Currency|Collection|Date|Double|Integer|Long(Long|Ptr)?|Object|Single|String|Variant)\b
-      - match: (?i)(?<=\s+As\s+)([a-zA-Z]+)
+      - match: (?i)(?:\s+As\s+)([a-zA-Z]+)
         captures:
           1:
             name: support.type
