--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -44,10 +44,8 @@ repository:
         match: (?i)\b(Empty|False|Nothing|Null|True)\b
 
   functions:
-    match: (?i:\b(?:Call|Function|Sub)\s([a-zA-Z][a-zA-Z0-9_]*)\b)(?=\(\)?)
-    captures:
-      1:
-        name: entity.name.function.vba
+    name: entity.name.function.vba
+    match: (?i:\b(?:(?<=Call )|(?<=Function )|(?<=Sub ))[a-zA-Z][a-zA-Z0-9_]*\b)(?=\(\)?)
 
   numbers:
     patterns:
@@ -74,7 +72,7 @@ repository:
     patterns:
       - name: support.type.builtin.vba
         match: (?i)\b(Any|Byte|Boolean|Currency|Collection|Date|Double|Integer|Long(Long|Ptr)?|Object|Single|String|Variant)\b
-      - match: (?i)(?:\s+As\s+)([a-zA-Z]+)
+      - match: (?i)(?<= As )([a-zA-Z]+)
         captures:
           1:
             name: support.type
