--- a/.github/workflows/gen_json_grammar.yml
+++ b/.github/workflows/gen_json_grammar.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   gen-json-grammars:
-    if: github.repository == 'tiabeast/vscode-vba'
+    if: github.repository == 'serkonda7/vscode-vba'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
