--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -22,9 +22,19 @@ patterns:
 
 repository:
   comments:
-    name: comment.line.quote
-    begin: "'"
-    end: $
+    begin: "(?=')|(?:^(?:|(\d*)\s*|[a-zA-Z][a-zA-Z0-9]{0,254}:\s*)|:\s*)(?=(?i:Rem
+      ))"
+    beginCaptures:
+      '1':
+        name: constant.numeric.decimal
+    end: "(?<!\s_)$\n"
+    patterns:
+    - name: comment.line.quote
+      match: "'.*"
+    - name: comment.line.rem
+      match: Rem .*
+    - name: comment.line.continuation
+      match: "^.*"
 
   keywords:
     patterns:
