--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -22,11 +22,11 @@ patterns:
 
 repository:
   comments:
-    begin: "(?=')|(?:^(?:|(\d*)\s*|[a-zA-Z][a-zA-Z0-9]{0,254}:\s*)|:\s*)(?=(?i:Rem ))"
+    begin: "(?=')|(?:^(?:|(\\d*)\\s*|[a-zA-Z][a-zA-Z0-9]{0,254}:\\s*)|:\\s*)(?=(?i:Rem ))"
     beginCaptures:
       '1':
         name: constant.numeric.decimal
-    end: "(?<!\s_)$\n"
+    end: "(?<!\\s_)$\n"
     patterns:
     - name: comment.line.quote
       match: "'.*"
