--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 				"extensions": [
 					".bas",
 					".cls",
-					".frm"
+					".frm",
+					".vba"
 				],
 				"configuration": "./out/language-configuration.json"
 			},
