--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "16"
-      - uses: tiabeast/setup-bait@v0.1
+      - uses: tiabeast/setup-bait@main
       - name: Install dependencies
         run: npm install
       - name: Compile
@@ -53,7 +53,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "16"
-      - uses: tiabeast/setup-bait@v0.1
+      - uses: tiabeast/setup-bait@main
       - name: Install dependencies
         run: npm install
       - name: Publish to VS Code Marketplace
