--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "VBA",
 	"description": "VBA tooling, syntax highlighting and snippets for VS Code.",
 	"icon": "images/icon_256x256.png",
-	"version": "0.10.0-dev",
+	"version": "0.9.2",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -81,7 +81,7 @@
 	},
 	"devDependencies": {
 		"@serkonda7/yaml2json": "^0.8.0",
-		"@vscode/vsce": "~2.20.0",
-		"vscode-tmgrammar-test": "~0.1.1"
+		"@vscode/vsce": "~2.21.0",
+		"vscode-tmgrammar-test": "~0.1.2"
 	}
 }
