--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -13,6 +13,7 @@ fileTypes:
 patterns:
   - include: "#comments"
   - include: "#keywords"
+  - include: "#metadata"
   - include: "#numbers"
   - include: "#storage"
   - include: "#strings"
@@ -56,6 +57,19 @@ repository:
   functions:
     name: entity.name.function.vba
     match: (?i:\b(?:(?<=Call )|(?<=Function )|(?<=Sub ))[a-zA-Z][a-zA-Z0-9_]*\b)(?=\(\)?)
+
+  metadata:
+    name: metadata.vba
+    begin: "(?i)^\\s*(BEGIN)\\b"
+    beginCaptures:
+      '1':
+        name: "keyword.metadata.vba"     
+    end: "(?i)^\\s*(END)\\b"
+    endCaptures:
+      '0':
+        name: "keyword.metadata.vba"
+    patterns: 
+      - include: "source.vba" 
 
   numbers:
     patterns:
