--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -46,7 +46,7 @@ repository:
       - name: keyword.control.vba
         match: (?i:(\b(Exit (Function|Property|Sub)|As|And|By(Ref|Val)|Goto|Is|Like|Mod|Not|On Error|Optional|Or|Resume Next|Stop|Xor|Eqv|Imp|TypeOf|AddressOf)\b)|(\b(End)\b(?=\n)))
       - name: keyword.io.vba
-        match: (?i:\b(Open|Close|Line Input|Lock|Unlock|Print|Seek|Width|Get|Put|Write)\b)
+        match: (?i:\b(Open|Close|Line Input|Lock|Unlock|Print|Seek|Get|Put|Write)\b)
       - name: keyword.io.vba
         match: "(?i:\\b(Input)(?= #))"
       - name: keyword.other.vba
