--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "VBA",
 	"description": "VBA tooling, syntax highlighting and snippets for VS Code.",
 	"icon": "images/icon_256x256.png",
-	"version": "0.9.4",
+	"version": "0.9.5-dev",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -22,7 +22,11 @@
 		"VBA",
 		"WWB"
 	],
-	"activationEvents": [],
+	"activationEvents": [
+		"onLanguage:vba",
+		"onLanguage:wwb",
+		"workspaceContains:**/*.{docm,xlsm,pptm}"
+	],
 	"main": "./out/extension.js",
 	"capabilities": {
 		"untrustedWorkspaces": {
@@ -65,7 +69,41 @@
 				"scopeName": "source.wwb",
 				"path": "./out/wwb.tmGrammar.json"
 			}
-		]
+		],
+		"commands": [
+			{
+				"command": "vba.extract_from_doc",
+				"title": "VBA: Extract code from office document."
+			},
+			{
+				"command": "vba.write_to_doc",
+				"title": "VBA: Write code to office document."
+			}
+		],
+		"menus": {
+			"commandPalette": [
+				{
+					"command": "vba.extract_from_doc",
+					"when": "false"
+				},
+				{
+					"command": "vba.write_to_doc",
+					"when": "false"
+				}
+			],
+			"explorer/context": [
+				{
+					"command": "vba.extract_from_doc",
+					"when": "resourceExtname in vba.ctx.docExts",
+					"group": "2_workspace"
+				},
+				{
+					"command": "vba.write_to_doc",
+					"when": "resourceExtname in vba.ctx.docExts",
+					"group": "2_workspace"
+				}
+			]
+		}
 	},
 	"scripts": {
 		"compile": "bait --library -o out/extension.js src",
