--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -1,6 +1,5 @@
-# This file is part of vscode-vba.
-# Copyright (c) 2021-present Lukas Neubert
-# This Grammar is subject to the terms of the Mozilla Public License 2.0.
+# SPDX-FileCopyrightText: 2023-present Lukas Neubert <serkonda7@pm.me>
+# SPDX-License-Identifier: MPL-2.0
 
 name: Visual Basic for Applications
 scopeName: source.vba
