--- a/.github/workflows/gen_json_grammar.yml
+++ b/.github/workflows/gen_json_grammar.yml
@@ -16,9 +16,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-      - uses: tiabeast/setup-bait@main
-      - run: npm install
+          node-version: 16.x
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
       - name: Run grammar converter and push changes
         run: bait run scripts/gen_json_grammar.bt
         env:
