change grammar file extensions to .yaml-tmlanguage

--- a/.github/workflows/gen_json_grammar.yml
+++ b/.github/workflows/gen_json_grammar.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - 'syntaxes/*.yml'
+      - 'syntaxes/*.yaml-tmlanguage'
 
 jobs:
   gen-json-grammars:
