--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
 		"test-vba": "vscode-tmgrammar-test -g ./out/vba.json \"syntaxes/tests/vba/*.bas\"",
 		"test-wwb": "vscode-tmgrammar-test -g ./out/wwb.json \"syntaxes/tests/other/*.wwd\"",
 		"install-dev-ext": "vsce package -o ./out/vscode-vba-dev.vsix && code --install-extension ./out/vscode-vba-dev.vsix --force",
-		"package": "vsce package",
+		"package": "vsce package -o vba.vsix",
 		"convert-yaml": "yaml2json language-configuration.yml \"syntaxes/*.yaml-tmlanguage\" \"snippets/*.yml\"",
 		"vscode:prepublish": "pnpm run compile && pnpm run convert-yaml"
 	},
